--- a/carciofo-web-blocker/options/options-styles.css
+++ b/carciofo-web-blocker/options/options-styles.css
@@ -16,7 +16,7 @@ body,
 body {
     /* Background image from: https://www.pexels.com/photo/close-up-photography-of-leaves-with-droplets-807598/ */
     background-image: url("../images/options-background.jpg");
-    background-color: black;
+    background-color: rgb(14 26 15);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -33,7 +33,7 @@ body {
     overflow: auto;
 
     background-color: rgba(66, 87, 60, 0.75);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(6px);
     border-radius: 40px;
     box-shadow: 0px 5px 10px 10px rgba(0, 0, 0, 0.25);
 }
