--- a/carciofo-web-blocker/options/options-styles.css
+++ b/carciofo-web-blocker/options/options-styles.css
@@ -57,6 +57,7 @@ body {
 #title {
     font-size: 48px;
     font-weight: 700;
+    user-select: none;
 
     justify-content: flex-start;
 }
@@ -108,10 +109,25 @@ textarea {
     font-weight: 600;
     padding: 10px 14px;
     border-radius: 12px;
+
+    transition: box-shadow 0.25s ease-out 0s;
+}
+
+#save-button:hover {
+    cursor: pointer;
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 #save-response {
     font-size: 18px;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.75);
+    user-select: none;
+
+    opacity: 0;
+    transition: opacity 0.7s ease-out 0s;
+}
+
+#save-response.visible {
+    opacity: 1;
 }
